Readme updated with installation instructions .env.example updated

--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=factschucknorris
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=laravel
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,14 +47,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_USERNAME=YOUR_MAILTRAP_USERNAME
+MAIL_PASSWORD=YOUR_MAILTRAP_PASSWORD
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -63,3 +64,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+APP_POST=8000
+
+SEND_MAIL_TOTAL_RESULTS=10
+
+FORWARD_DB_PORT=3307
